--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   },
   "private": true,
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "2.2.0"
   },
   "devDependencies": {
-    "@angular/cli": "~11.2.0",
+    "@angular/cli": "11.2.9",
     "@nrwl/tao": "12.0.6",
     "@nrwl/cli": "12.0.6",
     "@nrwl/workspace": "12.0.6",
-    "@types/node": "14.14.33",
+    "@types/node": "14.14.39",
     "dotenv": "8.2.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.1.4",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.5",
     "prettier": "2.2.1"
   }
 }
