--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   },
   "devDependencies": {
     "@angular/cli": "11.2.9",
-    "@nrwl/tao": "12.0.6",
+    "@nrwl/angular": "12.0.6",
     "@nrwl/cli": "12.0.6",
+    "@nrwl/tao": "12.0.6",
     "@nrwl/workspace": "12.0.6",
     "@types/node": "14.14.39",
     "dotenv": "8.2.0",
+    "prettier": "2.2.1",
     "ts-node": "9.1.1",
-    "typescript": "4.1.5",
-    "prettier": "2.2.1"
+    "typescript": "4.1.5"
   }
 }
