--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
@@ -29,17 +29,45 @@
   },
   "private": true,
   "dependencies": {
-    "tslib": "2.2.0"
+    "@angular/animations": "11.2.10",
+    "@angular/common": "11.2.10",
+    "@angular/compiler": "11.2.10",
+    "@angular/core": "11.2.10",
+    "@angular/forms": "11.2.10",
+    "@angular/platform-browser": "11.2.10",
+    "@angular/platform-browser-dynamic": "11.2.10",
+    "@angular/router": "11.2.10",
+    "rxjs": "6.6.7",
+    "tslib": "2.2.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.1102.9",
+    "@angular-eslint/eslint-plugin": "2.1.0",
+    "@angular-eslint/eslint-plugin-template": "2.1.0",
+    "@angular-eslint/template-parser": "2.1.0",
     "@angular/cli": "11.2.9",
+    "@angular/compiler-cli": "11.2.10",
+    "@angular/language-service": "11.2.10",
     "@nrwl/angular": "12.0.6",
     "@nrwl/cli": "12.0.6",
+    "@nrwl/eslint-plugin-nx": "12.0.6",
+    "@nrwl/jest": "12.0.6",
+    "@nrwl/linter": "12.0.6",
     "@nrwl/tao": "12.0.6",
     "@nrwl/workspace": "12.0.6",
-    "@types/node": "14.14.39",
+    "@types/jest": "26.0.22",
+    "@types/node": "14.14.41",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
     "dotenv": "8.2.0",
+    "eslint": "7.24.0",
+    "eslint-config-prettier": "8.2.0",
+    "jest": "26.6.3",
+    "jest-preset-angular": "8.4.0",
+    "ng-packagr": "^11.2.4",
     "prettier": "2.2.1",
+    "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
     "typescript": "4.1.5"
   }
