--- a/nx.json
+++ b/nx.json
@@ -1,31 +1,21 @@
 {
   "npmScope": "angular-three",
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "implicitDependencies": {
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     ".eslintrc.json": "*"
   },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
-  "projects": {},
-  "workspaceLayout": {
-    "appsDir": "packages",
-    "libsDir": "packages"
-  }
+  "projects": {
+    "core": { "tags": ["scope:core", "type:library"] },
+    "core-typings": {
+      "tags": ["scope:core", "type:library", "context:typings"]
+    }
+  },
+  "workspaceLayout": { "appsDir": "packages", "libsDir": "packages" }
 }
