--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@angular/platform-browser": "11.2.10",
     "@angular/platform-browser-dynamic": "11.2.10",
     "@angular/router": "11.2.10",
+    "@ngrx/component-store": "11.1.0",
     "rxjs": "6.6.7",
+    "three": "0.127.0",
     "tslib": "2.2.0",
     "zone.js": "0.11.4"
   },
@@ -58,6 +60,7 @@
     "@nrwl/workspace": "12.0.6",
     "@types/jest": "26.0.22",
     "@types/node": "14.14.41",
+    "@types/three": "0.127.1",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "dotenv": "8.2.0",
@@ -65,7 +68,7 @@
     "eslint-config-prettier": "8.2.0",
     "jest": "26.6.3",
     "jest-preset-angular": "8.4.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "11.2.4",
     "prettier": "2.2.1",
     "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
