--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,10 @@
     "paths": {
       "@angular-three/core": ["packages/core/src/index.ts"],
       "@angular-three/core/typings": ["packages/core/typings/src/index.ts"],
-      "@angular-three/core/materials": ["packages/core/materials/src/index.ts"]
+      "@angular-three/core/materials": ["packages/core/materials/src/index.ts"],
+      "@angular-three/core/geometries": [
+        "packages/core/geometries/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
