--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
       "@angular-three/core/geometries": [
         "packages/core/geometries/src/index.ts"
       ],
-      "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"]
+      "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
+      "@angular-three/core/lights": ["packages/core/lights/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
