--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,7 +23,8 @@
       ],
       "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
       "@angular-three/core/lights": ["packages/core/lights/src/index.ts"],
-      "@angular-three/core/loaders": ["packages/core/loaders/src/index.ts"]
+      "@angular-three/core/loaders": ["packages/core/loaders/src/index.ts"],
+      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
