--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,11 @@
       "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
       "@angular-three/core/lights": ["packages/core/lights/src/index.ts"],
       "@angular-three/core/loaders": ["packages/core/loaders/src/index.ts"],
-      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"]
+      "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
+      "@angular-three/controls": ["packages/controls/src/index.ts"],
+      "@angular-three/controls/orbit-controls": [
+        "packages/controls/orbit-controls/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
