--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "11.2.10",
     "@angular/router": "11.2.10",
     "@ngrx/component-store": "11.1.0",
+    "nice-color-palettes": "3.0.0",
     "rxjs": "6.6.7",
     "three": "0.127.0",
     "tslib": "2.2.0",
