--- a/packages/core/canvas/.eslintrc.json
+++ b/packages/core/canvas/.eslintrc.json
@@ -8,9 +8,7 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": {
-        "project": ["packages/controls/orbit-controls/tsconfig.*?.json"]
-      },
+      "parserOptions": { "project": ["packages/core/canvas/tsconfig.*?.json"] },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
